syntax = "proto3";

package api.v1;

import "google/api/annotations.proto";
import "google/protobuf/timestamp.proto";

option go_package = "algorithm-platform/api/v1/proto;v1";

service AlgorithmService {
  rpc ExecuteAlgorithm(ExecuteRequest) returns (ExecuteResponse) {
    option (google.api.http) = {
      post: "/api/v1/algorithms/{algorithm_id}/execute"
      body: "*"
    };
  }

  rpc GetJobStatus(GetJobStatusRequest) returns (GetJobStatusResponse) {
    option (google.api.http) = {
      get: "/api/v1/jobs/{job_id}"
    };
  }
}

message ExecuteRequest {
  string algorithm_id = 1;
  string mode = 2;
  bool is_async = 3;
  map<string, string> params = 4;
  InputSource input_source = 5;
  string webhook_url = 6;
  bool force_refresh = 7;
  ResourceConfig resource_config = 8;
  int32 timeout_seconds = 9;
}

message InputSource {
  string type = 1;
  string url = 2;
}

message ResourceConfig {
  float cpu_limit = 1;
  string memory_limit = 2;
}

message ExecuteResponse {
  string job_id = 1;
  string status = 2;
  string result_url = 3;
  string message = 4;
}

message GetJobStatusRequest {
  string job_id = 1;
}

message GetJobStatusResponse {
  string job_id = 1;
  string status = 2;
  string result_url = 3;
  google.protobuf.Timestamp started_at = 4;
  google.protobuf.Timestamp finished_at = 5;
  int32 cost_time_ms = 6;
}
