syntax = "proto3";

package api.v1;

import "google/api/annotations.proto";
import "google/protobuf/timestamp.proto";

option go_package = "algorithm-platform/api/v1;v1";

service ManagementService {
  rpc CreateAlgorithm(CreateAlgorithmRequest) returns (Algorithm) {
    option (google.api.http) = {
      post: "/api/v1/algorithms"
      body: "*"
    };
  }

  rpc UpdateAlgorithm(UpdateAlgorithmRequest) returns (Algorithm) {
    option (google.api.http) = {
      put: "/api/v1/algorithms/{id}"
      body: "*"
    };
  }

  rpc ListAlgorithms(ListAlgorithmsRequest) returns (ListAlgorithmsResponse) {
    option (google.api.http) = {
      get: "/api/v1/algorithms"
    };
  }

  rpc CreateVersion(CreateVersionRequest) returns (Version) {
    option (google.api.http) = {
      post: "/api/v1/algorithms/{algorithm_id}/versions"
      body: "*"
    };
  }

  rpc RollbackVersion(RollbackVersionRequest) returns (Algorithm) {
    option (google.api.http) = {
      post: "/api/v1/algorithms/{algorithm_id}/versions/{version_id}/rollback"
      body: "*"
    };
  }

  rpc UploadPresetData(UploadDataRequest) returns (UploadDataResponse) {
    option (google.api.http) = {
      post: "/api/v1/data/upload"
      body: "*"
    };
  }

  rpc ListPresetData(ListPresetDataRequest) returns (ListPresetDataResponse) {
    option (google.api.http) = {
      get: "/api/v1/data"
    };
  }

  rpc ListJobs(ListJobsRequest) returns (ListJobsResponse) {
    option (google.api.http) = {
      get: "/api/v1/jobs"
    };
  }

  rpc GetJobDetail(GetJobDetailRequest) returns (JobDetail) {
    option (google.api.http) = {
      get: "/api/v1/jobs/{job_id}/detail"
    };
  }
}

message CreateAlgorithmRequest {
  string name = 1 [json_name = "name"];
  string description = 2 [json_name = "description"];
  string language = 3 [json_name = "language"];
  Platform platform = 4 [json_name = "platform"];
  string entrypoint = 5 [json_name = "entrypoint"];
  repeated string tags = 6 [json_name = "tags"];
  string preset_data_id = 7 [json_name = "preset_data_id"];
  bytes file_data = 8 [json_name = "file_data"];
  string file_name = 9 [json_name = "file_name"];
}

message UpdateAlgorithmRequest {
  string id = 1 [json_name = "id"];
  string name = 2 [json_name = "name"];
  string description = 3 [json_name = "description"];
  repeated string tags = 4 [json_name = "tags"];
}

enum Platform {
  PLATFORM_DOCKER = 0 [json_name = "docker"];
  PLATFORM_LINUX_X86_64 = 1 [json_name = "linux_x86_64"];
  PLATFORM_LINUX_ARM64 = 2 [json_name = "linux_arm64"];
  PLATFORM_WINDOWS_X86_64 = 3 [json_name = "windows_x86_64"];
  PLATFORM_MACOS_ARM64 = 4 [json_name = "macos_arm64"];
}

message Algorithm {
  string id = 1 [json_name = "id"];
  string name = 2 [json_name = "name"];
  string description = 3 [json_name = "description"];
  string language = 4 [json_name = "language"];
  Platform platform = 5 [json_name = "platform"];
  string entrypoint = 6 [json_name = "entrypoint"];
  repeated string tags = 7 [json_name = "tags"];
  string current_version_id = 8 [json_name = "current_version_id"];
  google.protobuf.Timestamp created_at = 9 [json_name = "created_at"];
  google.protobuf.Timestamp updated_at = 10 [json_name = "updated_at"];
}

message ListAlgorithmsRequest {
  string category = 1 [json_name = "category"];
  string language = 2 [json_name = "language"];
  int32 page = 3 [json_name = "page"];
  int32 page_size = 4 [json_name = "page_size"];
}

message ListAlgorithmsResponse {
  repeated Algorithm algorithms = 1 [json_name = "algorithms"];
  int32 total = 2 [json_name = "total"];
}

message CreateVersionRequest {
  string algorithm_id = 1 [json_name = "algorithm_id"];
  string source_code_zip_url = 2 [json_name = "source_code_zip_url"];
  string commit_message = 3 [json_name = "commit_message"];
  bytes file_data = 4 [json_name = "file_data"];
  string file_name = 5 [json_name = "file_name"];
}

message Version {
  string id = 1 [json_name = "id"];
  string algorithm_id = 2 [json_name = "algorithm_id"];
  int32 version_number = 3 [json_name = "version_number"];
  string minio_path = 4 [json_name = "minio_path"];
  string source_code_file = 5 [json_name = "source_code_file"];
  string commit_message = 6 [json_name = "commit_message"];
  google.protobuf.Timestamp created_at = 7 [json_name = "created_at"];
}

message RollbackVersionRequest {
  string algorithm_id = 1 [json_name = "algorithm_id"];
  string version_id = 2 [json_name = "version_id"];
}

message UploadDataRequest {
  string filename = 1 [json_name = "filename"];
  string category = 2 [json_name = "category"];
  bytes file_data = 3 [json_name = "file_data"];
  string minio_path = 4 [json_name = "minio_path"];
}

message UploadDataResponse {
  string file_id = 1 [json_name = "file_id"];
  string minio_url = 2 [json_name = "minio_url"];
}

message ListPresetDataRequest {
  string category = 1 [json_name = "category"];
  int32 page = 2 [json_name = "page"];
  int32 page_size = 3 [json_name = "page_size"];
}

message PresetData {
  string id = 1 [json_name = "id"];
  string filename = 2 [json_name = "filename"];
  string category = 3 [json_name = "category"];
  string minio_url = 4 [json_name = "minio_url"];
  google.protobuf.Timestamp created_at = 5 [json_name = "created_at"];
}

message ListPresetDataResponse {
  repeated PresetData files = 1 [json_name = "files"];
  int32 total = 2 [json_name = "total"];
}

message ListJobsRequest {
  string algorithm_id = 1 [json_name = "algorithm_id"];
  string status = 2 [json_name = "status"];
  int32 page = 3 [json_name = "page"];
  int32 page_size = 4 [json_name = "page_size"];
}

message JobSummary {
  string job_id = 1 [json_name = "job_id"];
  string algorithm_id = 2 [json_name = "algorithm_id"];
  string algorithm_name = 3 [json_name = "algorithm_name"];
  string status = 4 [json_name = "status"];
  google.protobuf.Timestamp created_at = 5 [json_name = "created_at"];
  int32 cost_time_ms = 6 [json_name = "cost_time_ms"];
}

message ListJobsResponse {
  repeated JobSummary jobs = 1 [json_name = "jobs"];
  int32 total = 2 [json_name = "total"];
}

message GetJobDetailRequest {
  string job_id = 1 [json_name = "job_id"];
}

message JobDetail {
  string job_id = 1 [json_name = "job_id"];
  string algorithm_id = 2 [json_name = "algorithm_id"];
  string algorithm_name = 3 [json_name = "algorithm_name"];
  string mode = 4 [json_name = "mode"];
  string status = 5 [json_name = "status"];
  string input_params = 6 [json_name = "input_params"];
  string input_url = 7 [json_name = "input_url"];
  string output_url = 8 [json_name = "output_url"];
  string log_url = 9 [json_name = "log_url"];
  google.protobuf.Timestamp created_at = 10 [json_name = "created_at"];
  google.protobuf.Timestamp started_at = 11 [json_name = "started_at"];
  google.protobuf.Timestamp finished_at = 12 [json_name = "finished_at"];
  int32 cost_time_ms = 13 [json_name = "cost_time_ms"];
  string worker_id = 14 [json_name = "worker_id"];
}
